# minomaly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
include/minomaly/: component.hpp  entity.hpp  input_system.hpp  log_manager.hpp  logger.hpp  manager.hpp  minomaly.hpp  render_system.hpp  system.hpp  window_system.hpp
include/minomaly/common/: aabb.hpp  matrix.hpp  point.hpp  vector.hpp
include/minomaly/component/: position_component.hpp  render_component.hpp
include/minomaly/system/: input_system.hpp  render_system.hpp  sdl_subsystems.hpp
src/: entity.cpp  input_system.cpp  log_manager.cpp  logger.cpp  minomaly.cpp  render_system.cpp  sdl_subsystems.cpp  window_system.cpp
src/system/: input_system.cpp  render_system.cpp  sdl_subsystems.cpp  window_system.cpp
test/: main.cpp  test_app.cpp  test_manager.cpp  test_matrix.cpp  test_vector.cpp
